--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,245 +1,252 @@
-* {
-  box-sizing: border-box; }
+*{
+	margin:0px;
+	padding:0px;
+}
 
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #606c71; }
+h1{
+	font-family:'Times New Roman';
+	text-align:center;
+	background:linear-gradient(white,silver);
+}
+.pagebody ul{
+	text-align:center;
+	width:100%;
+}
 
-a {
-  color: #1e6bb8;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
+.pagebody li{
+	font-size:25px;
+	font-family:'Times New Roman';
+	font-weight:bold;
+	width:278px;
+	text-align:center;
+	float:left;
+	list-style-type:none;
+	padding:5px;
+	background:linear-gradient(silver,sienna);
+}
 
-.btn {
-  display: inline-block;
-  margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
-    margin-left: 1rem; }
+li a{
+	text-decoration:none;
+}
 
-.btn:hover {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
+li a:link{
+	color:black;
+}
 
-@media screen and (min-width: 64em) {
-  .btn {
-    padding: 0.75rem 1rem; } }
+li a:visited{
+	color:black;
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .btn {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
+li a:hover{
+	color:dimgrey;
+}
 
-@media screen and (max-width: 42em) {
-  .btn {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem; }
-    .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } }
+li a:active{
+	color:black;
+}
 
-.page-header {
-  color: #fff;
-  text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+#in{
+	position:relative;
+}
+#in img{
+	margin-top:48px;
+	height:550px;
+	width:100%;
+	position:absolute;
+	left:0;
+	top:0;
+}
 
-@media screen and (min-width: 64em) {
-  .page-header {
-    padding: 5rem 6rem; } }
+h3{
+	color:white;
+	font-size:30px;
+	font-family:'Times New Roman';
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .page-header {
-    padding: 3rem 4rem; } }
+.relative{
+	position:relative;
+}
+.absolute{
+	position:absolute;
+	top:350px;
+	left:330px;
+}
 
-@media screen and (max-width: 42em) {
-  .page-header {
-    padding: 2rem 1rem; } }
+.siderelative{
+	height:500px;
+	width:230px;
+	position:absolute;
+	top:150px;
+	left:50px;
+	background-color:rgba(192,192,192,0.5);
+	position:fixed;
+}
 
-.project-name {
-  margin-top: 0;
-  margin-bottom: 0.1rem; }
+.siderelative h2{
+	margin-top:60px;
+	text-align:center;
+	font-family:'Times New Roman';
+}
 
-@media screen and (min-width: 64em) {
-  .project-name {
-    font-size: 3.25rem; } }
+.siderelative li{
+	text-decoration:none;
+	list-style-type:none;
+	padding-top:25px;
+	text-align:center;
+	font-family:'Times New Roman';
+	font-size:17px;
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-name {
-    font-size: 2.25rem; } }
+.siderelative a:link{
+	color:black;
+}
 
-@media screen and (max-width: 42em) {
-  .project-name {
-    font-size: 1.75rem; } }
+.siderelative a:visited{
+	color:black;
+}
 
-.project-tagline {
-  margin-bottom: 2rem;
-  font-weight: normal;
-  opacity: 0.7; }
+.siderelative a:hover{
+	color:green;
+}
 
-@media screen and (min-width: 64em) {
-  .project-tagline {
-    font-size: 1.25rem; } }
+.siderelative a:active{
+	color:black;
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-tagline {
-    font-size: 1.15rem; } }
 
-@media screen and (max-width: 42em) {
-  .project-tagline {
-    font-size: 1rem; } }
+.detail1{
+	margin-top:700px;
+	text-align:center;
+}
 
-.main-content :first-child {
-  margin-top: 0; }
-.main-content img {
-  max-width: 100%; }
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  font-weight: normal;
-  color: #159957; }
-.main-content p {
-  margin-bottom: 1em; }
-.main-content code {
-  padding: 2px 4px;
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-size: 0.9rem;
-  color: #383e41;
-  background-color: #f3f6fa;
-  border-radius: 0.3rem; }
-.main-content pre {
-  padding: 0.8rem;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  color: #567482;
-  word-wrap: normal;
-  background-color: #f3f6fa;
-  border: solid 1px #dce6f0;
-  border-radius: 0.3rem; }
-  .main-content pre > code {
-    padding: 0;
-    margin: 0;
-    font-size: 0.9rem;
-    color: #567482;
-    word-break: normal;
-    white-space: pre;
-    background: transparent;
-    border: 0; }
-.main-content .highlight {
-  margin-bottom: 1rem; }
-  .main-content .highlight pre {
-    margin-bottom: 0;
-    word-break: normal; }
-.main-content .highlight pre, .main-content pre {
-  padding: 0.8rem;
-  overflow: auto;
-  font-size: 0.9rem;
-  line-height: 1.45;
-  border-radius: 0.3rem; }
-.main-content pre code, .main-content pre tt {
-  display: inline;
-  max-width: initial;
-  padding: 0;
-  margin: 0;
-  overflow: initial;
-  line-height: inherit;
-  word-wrap: normal;
-  background-color: transparent;
-  border: 0; }
-  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
-    content: normal; }
-.main-content ul, .main-content ol {
-  margin-top: 0; }
-.main-content blockquote {
-  padding: 0 1rem;
-  margin-left: 0;
-  color: #819198;
-  border-left: 0.3rem solid #dce6f0; }
-  .main-content blockquote > :first-child {
-    margin-top: 0; }
-  .main-content blockquote > :last-child {
-    margin-bottom: 0; }
-.main-content table {
-  display: block;
-  width: 100%;
-  overflow: auto;
-  word-break: normal;
-  word-break: keep-all; }
-  .main-content table th {
-    font-weight: bold; }
-  .main-content table th, .main-content table td {
-    padding: 0.5rem 1rem;
-    border: 1px solid #e9ebec; }
-.main-content dl {
-  padding: 0; }
-  .main-content dl dt {
-    padding: 0;
-    margin-top: 1rem;
-    font-size: 1rem;
-    font-weight: bold; }
-  .main-content dl dd {
-    padding: 0;
-    margin-bottom: 1rem; }
-.main-content hr {
-  height: 2px;
-  padding: 0;
-  margin: 1rem 0;
-  background-color: #eff0f1;
-  border: 0; }
+h2 a{
+	text-decoration:none;
+	font-family:'Times New Roman';
+}
 
-@media screen and (min-width: 64em) {
-  .main-content {
-    max-width: 64rem;
-    padding: 2rem 6rem;
-    margin: 0 auto;
-    font-size: 1.1rem; } }
+h2 a:link{
+	color:green;
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .main-content {
-    padding: 2rem 4rem;
-    font-size: 1.1rem; } }
+h2 a:visited{
+	color:green;
+}
 
-@media screen and (max-width: 42em) {
-  .main-content {
-    padding: 2rem 1rem;
-    font-size: 1rem; } }
+h2 a:hover{
+	border-bottom:3px dotted black;
+}
 
-.site-footer {
-  padding-top: 2rem;
-  margin-top: 2rem;
-  border-top: solid 1px #eff0f1; }
+h2 a:active{
+	color:green;
+}
 
-.site-footer-owner {
-  display: block;
-  font-weight: bold; }
+.detailcore1 img{
+	height:220px;
+	width:370px;
+	position:absolute;
+	top:784px;
+	left:350px;
+}
 
-.site-footer-credits {
-  color: #819198; }
+p{
+	margin-left:720px;
+	padding-top:60px;
+	background-color:gainsboro;
+}
 
-@media screen and (min-width: 64em) {
-  .site-footer {
-    font-size: 1rem; } }
+.comment{
+	height:160px;
+	width:370px;
+	font-family:'Times New Roman';
+}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .site-footer {
-    font-size: 1rem; } }
+.detail2{
+	margin-top:120px;
+	text-align:center;
+}
 
-@media screen and (max-width: 42em) {
-  .site-footer {
-    font-size: 0.9rem; } }
+.detailcore2 img{
+	height:220px;
+	width:370px;
+	position:absolute;
+	top:1160px;
+	left:350px;
+}
+
+.comment2{
+	height:160px;
+	width:370px;
+	font-family:'Times New Roman';
+}
+
+.detail3{
+	margin-top:120px;
+	text-align:center;
+}
+
+.detailcore3 img{
+	height:220px;
+	width:370px;
+	position:absolute;
+	top:1536px;
+	left:350px;
+}
+
+.comment3{
+	height:140px;
+	width:370px;
+	padding-top:80px;
+	font-family:'Times New Roman';
+}
+
+.footer{
+	height:280px;
+	width:100%;
+	margin-top:180px;
+	background-color:gainsboro;
+	font-family:'Times New Roman';
+}
+
+.footercore1{
+	float:left;
+	margin-left:150px;
+	padding-top:40px;
+}
+
+.footercore2{
+	float:left;
+	margin-left:150px;
+	padding-top:40px;
+}
+
+.footercore3{
+	float:left;
+	margin-left:150px;
+	padding-top:40px;
+}
+
+.footercore4{
+	float:left;
+	margin-left:150px;
+	padding-top:40px;
+}
+
+.footer ul li{
+	padding:3px;
+}
+
+h4 a:link{
+	color:green;
+}
+
+.footer h4 a:visited{
+	color:green;
+}
+
+.footer h4 a:hover{
+	color:mediumseagreen;
+}
+.footer h4 a:active{
+ 	color:green;
+ }
+ 
